apps/rook-ceph/manifests/ceph-dashboard-istio-dev.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rook-ceph-mgr-dashboard # [필수] VirtualService의 쿠버네티스 자원 식별명
  namespace: rook-ceph          # [필수] 라우팅 대상 목적지 서비스가 존재하는 네임스페이스
spec:
  hosts:
    - "ceph-dev.apppaas.io"     # [필수] 개발 환경 대시보드 접근에 사용할 고유 도메인 주소
  gateways:
    - istio-system/istio-ingressgateway # [필수] 트래픽을 인입시킬 대상 Istio 인그레스 게이트웨이 지정
  http:
    - match:
        - uri:
            prefix: /           # [필수] 일치시킬 인입 요청 URL 경로 접두사 조건
      route:
        - destination:
            host: rook-ceph-mgr-dashboard.rook-ceph.svc.cluster.local # [필수] 사내망 내부의 실제 목적지 내부 서비스 도메인
            port:
              number: 7000      # [필수] 목적지 서비스가 수신 대기 중인 HTTP 포트 번호
